SensoritemsettingActivity is beginning

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,5 +26,6 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo.Dialog" />
         <activity android:name=".utils.ItemSetingActivity"/>
+        <activity android:name=".utils.SensoritemsettingActivity"/>
     </application>
 </manifest>
