--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.github.d-max:spots-dialog:0.7@aar'
     implementation project(':indicatorseekbar')
+    compile 'com.github.lecho:hellocharts-android:v1.5.8'
 }
