添加NB注册业务功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,5 +35,7 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".utils.InstrumemtItemseetingActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".utils.NbServiceAddrInputActivity"
+            android:screenOrientation="portrait"/>
     </application>
 </manifest>
