--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,5 +37,7 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".utils.NbServiceAddrInputActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".utils.FreezeDataDrawChartActivit"
+            android:screenOrientation="landscape"/>
     </application>
 </manifest>
