--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
-        versionName "1.7"
+        versionName "1.8"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.github.lecho:hellocharts-android:v1.5.8'
     compile 'org.xutils:xutils:3.5.0'
     compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.android.support:cardview-v7:26.1.0'
 }
