--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,5 +39,7 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".utils.FreezeDataDrawChartActivit"
             android:screenOrientation="landscape"/>
+        <activity android:name=".hexfile2bin.FileBrowserActivity"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
