--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'pub.devrel:easypermissions:0.1.9'
+    compile 'com.contrarywind:Android-PickerView:4.1.6'
 }
