--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
     defaultConfig {
         applicationId "gc.dtu.weeg.dtugc"
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
-        versionName "2.9"
+        versionName "3.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -33,17 +33,17 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.github.d-max:spots-dialog:0.7@aar'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.github.d-max:spots-dialog:0.7@aar'
     implementation project(':indicatorseekbar')
-    compile 'com.github.lecho:hellocharts-android:v1.5.8'
-    compile 'org.xutils:xutils:3.5.0'
-    compile 'com.google.code.gson:gson:2.6.2'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'pub.devrel:easypermissions:0.1.9'
-    compile 'com.contrarywind:Android-PickerView:4.1.6'
+    implementation 'com.github.lecho:hellocharts-android:v1.5.8'
+    implementation 'org.xutils:xutils:3.5.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'pub.devrel:easypermissions:0.1.9'
+    implementation 'com.contrarywind:Android-PickerView:4.1.8'
 }
