--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,12 @@ buildscript {
     
     repositories {
         google()
-     //   maven{ url'http://maven.aliyun.com/nexus/content/groups/public/'}
+        maven { url 'https://maven.google.com' }
+//        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/'}
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.5.0'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -20,6 +21,7 @@ allprojects {
     repositories {
         google()
     //    maven{ url'http://maven.aliyun.com/nexus/content/groups/public/'}
+        maven { url 'https://maven.google.com' }
         jcenter()
         maven {
             url "https://jitpack.io"
