--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
-        versionName "3.1"
+        versionName "3.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -41,9 +41,10 @@ dependencies {
     implementation 'com.github.d-max:spots-dialog:0.7@aar'
     implementation project(':indicatorseekbar')
     implementation 'com.github.lecho:hellocharts-android:v1.5.8'
-    implementation 'org.xutils:xutils:3.5.0'
+    implementation 'org.xutils:xutils:3.6.12'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'pub.devrel:easypermissions:0.1.9'
     implementation 'com.contrarywind:Android-PickerView:4.1.8'
+    implementation 'com.squareup.retrofit2:retrofit:2.0.2'
 }
