--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,12 @@ android {
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
-        versionName "3.2"
+        versionName "3.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk{
+            abiFilters 'armeabi' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+        }
+
     }
     buildTypes {
         release {
@@ -42,9 +46,11 @@ dependencies {
     implementation project(':indicatorseekbar')
     implementation 'com.github.lecho:hellocharts-android:v1.5.8'
     implementation 'org.xutils:xutils:3.6.19'
-    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'pub.devrel:easypermissions:0.1.9'
     implementation 'com.contrarywind:Android-PickerView:4.1.8'
     implementation 'com.squareup.retrofit2:retrofit:2.0.2'
+    implementation 'com.tencent.bugly:crashreport:latest.release' //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
+    implementation 'com.tencent.bugly:nativecrashreport:latest.release' //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
 }
