--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +19,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
                   android:screenOrientation="portrait">
@@ -27,7 +33,6 @@
             android:name=".bluetooth.DeviceListActivity"
             android:configChanges="orientation|keyboard|keyboardHidden"
             android:label="@string/select_device"
-            android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo.Dialog" />
         <activity android:name=".utils.ItemSetingActivity"
             android:screenOrientation="portrait"
@@ -42,5 +47,21 @@
             android:screenOrientation="landscape"/>
         <activity android:name=".hexfile2bin.FileBrowserActivity"
             android:screenOrientation="portrait" />
+        <!-- 配置APP ID -->
+        <meta-data
+            android:name="BUGLY_APPID"
+            android:value="77550d3c58" />
+        <!-- 配置APP版本号 -->
+        <meta-data
+            android:name="BUGLY_APP_VERSION"
+            android:value="1.3.3" />
+        <!-- 配置APP渠道号 -->
+<!--        <meta-data-->
+<!--            android:name="BUGLY_APP_CHANNEL"-->
+<!--            android:value="<APP_Channel>" />-->
+        <!-- 配置Bugly调试模式（true或者false）-->
+        <meta-data
+            android:name="BUGLY_ENABLE_DEBUG"
+            android:value="true" />
     </application>
 </manifest>
