--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
-        versionName "4.4"
+        versionName "4.9"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk{
             abiFilters 'armeabi' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
@@ -49,7 +49,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.github.d-max:spots-dialog:0.7@aar'
     implementation project(':indicatorseekbar')
-    implementation 'com.github.lecho:hellocharts-android:v1.5.8'
     implementation 'org.xutils:xutils:3.6.19'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.android.support:cardview-v7:28.0.0'
@@ -59,4 +58,6 @@ dependencies {
     implementation 'com.tencent.bugly:crashreport:latest.release' //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
     implementation 'com.tencent.bugly:nativecrashreport:latest.release' //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
+//    implementation 'com.github.lecho:hellocharts-android:v1.5.8'
+    compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
 }
