--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,14 @@ buildscript {
     
     repositories {
         google()
+        maven { url 'https://dl.google.com/dl/android/maven2/' }
 //        maven { url 'https://maven.google.com' }
-        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/'}
+//        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/'}
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
-        
-
+//        classpath 'com.android.tools.build:gradle:7.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,7 +20,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/'}
+//        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/'}
+        maven { url 'https://dl.google.com/dl/android/maven2/' }
 //        maven { url 'https://maven.google.com' }
         jcenter()
         maven {
