--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ buildscript {
     
     repositories {
         google()
-        maven { url 'https://dl.google.com/dl/android/maven2/' }
+//        maven { url 'https://dl.google.com/dl/android/maven2/' }
 //        maven { url 'https://maven.google.com' }
-//        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/'}
+        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/'}
         jcenter()
     }
     dependencies {
@@ -20,8 +20,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-//        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/'}
-        maven { url 'https://dl.google.com/dl/android/maven2/' }
+        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/'}
+//        maven { url 'https://dl.google.com/dl/android/maven2/' }
 //        maven { url 'https://maven.google.com' }
         jcenter()
         maven {
