--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,8 @@
             android:screenOrientation="landscape"/>
         <activity android:name=".hexfile2bin.FileBrowserActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".ptz.PTZSettingActicity"
+            android:screenOrientation="portrait" />
         <!-- 配置APP ID -->
         <meta-data
             android:name="BUGLY_APPID"
